# tennispredictor

./: LICENSE  README.md
code/: .gitignore
code/databuilder/: pyproject.toml
code/databuilder/src/databuilder/: data.py  elo.py  enums.py  export.py  glicko2.py  iter.py  load.py  main.py  stats.py
data/: ranking_comparison.csv
data/tennis-data.co.uk/: 2000.csv  2000.xls  2001.csv  2002.csv  2003.csv  2004.csv  2005.csv  2006.csv  2007.csv  2008.csv  2009.csv  2010.csv  2011.csv  2012.csv  2013.csv  2014.csv  2015.csv  2016.csv  2017.csv  2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv  2024.csv  2024.xlsx  2025.csv  2025.xlsx
data/tennismylife.org/: 1973.csv  1974.csv  1975.csv  1976.csv  1978_challenge.csv  1979_challenger.csv  1980.csv  1980_challenger.csv  1981_challenger.csv  1982_challenger.csv  1983_challenger.csv  1984_challenger.csv  1985_challenger.csv  1986_challenger.csv  1987_challenger.csv  1988_challenger.csv  1989_challenger.csv  1990_challenger.csv  1991_challenger.csv  1992_challenger.csv  1994.csv  (+48 more)
experiments/: 01_ranking_difference.ows  02_basic_classifiers.ows  02_data_quality_by_year.ows  02_head2head.ows  02_predictions.ows  02_stacking_models.ows  03_highest_rank.ows  04_win_rate.ows  05_elo.ows  05_elo_top_players.ows  06_gradient_boosting_models.ows  06_surface_elo.ows  07_evaluation_by_year.ows  07_weighted_elos.ows  08_glicko.ows  09_surface_glicko.ows  10_weighted_glickos.ows  11_year_win_rates.ows
notebook/: tennispredictor.ipynb
report/: .gitignore  main.tex  main.toc  preamble.tex  references.bib  report.tex
