[project]
name = "databuilder"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergio de Carvalho",email = "sergio.carvalho@workday.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "databuilder", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pylint (>=4.0.5,<5.0.0)"
]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", ".venv", "*.egg-info"]

[tool.pylint.messages_control]
disable = [
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 88
